--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -750,6 +750,24 @@
 /* 점프업 - 포인트신청관리_신청(등록) (UI_ADHPChM02) */
 
 /* [팝업] 구직활동팝업 (UI_ADHPChP03) */
+.allcare .newpop_page .jobact_inner {padding: 0 20px;}
+.allcare .newpop_page .jobact_wrap {}
+.allcare .newpop_page .jobact_chk_tit {font-size: 16px; color: #333; font-weight: 600; line-height: 24px;}
+.allcare .newpop_page .jobact_chk_tit span {color: var(--col_blue); position: relative; margin-left: 8px; padding-left: 8px; font-weight: 600;}
+.allcare .newpop_page .jobact_chk_box .jobact_chk_tit span:after {content: ''; position: absolute; left: 0; top: 50%; transform: translateY(-50%); width: 1px; height: 12px; background-color: #ddd;}
+.allcare .newpop_page .jobact_chk_box {display: flex; align-items: center; gap: 6px;}
+.allcare .newpop_page .jobact_chk_box input {margin: 0;}
+.allcare .newpop_page .jobact_chk_box label {}
+.allcare .newpop_page .jobact_list+.jobact_list {margin-top: 24px;}
+.allcare .newpop_page .jobact_inner_ul {margin-top: 12px; border: 1px solid #eee; border-radius: 4px; padding: 20px 16px;}
+.allcare .newpop_page .jobact_inner_list {display: flex; align-items: center; justify-content: space-between; gap: 16px;}
+.allcare .newpop_page .jobact_inner_list+.jobact_inner_list {margin-top: 8px;}
+.allcare .newpop_page .jobact_inner_tit {}
+.allcare .newpop_page .jobact_inner_tit p {font-size: 14px; color: #555; font-weight: 400; line-height: 24px;}
+.allcare .newpop_page .jobact_inner_desc {}
+.allcare .newpop_page .jobact_inner_desc p {font-size: 14px; color: #333; font-weight: 400; line-height: 24px;} 
+.allcare .newpop_page .jobact_dropbox {flex-direction: column; align-items: flex-start; gap: 4px;}
+
 
 /* [팝업] 부정수급 방지 확인서 (UI_ADHPChP04) */
 .allcare .newpop_page .commitment_inner {padding: 24px 20px 40px;}
