--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -711,7 +711,8 @@
 .mypage .progmg.allcare .list_none_form .list_none_inner {background-color: #f5f6f8; border-radius: 8px; padding: 40px 16px; display: flex; flex-direction: column; align-items: center;}
 .mypage .progmg.allcare .list_none_form .list_none_inner .icon {width: 56px; height: 60px; display: block; background: url('../images/mypage/ico60_app-form.svg') no-repeat center / contain;}
 .mypage .progmg.allcare .list_none_form .list_none_inner .list_none_txt p {text-align: center;}
-.mypage .progmg.allcare .iap_list_form .iap_list_li {padding: 20px 16px; border: 1px solid #ddd; border-radius: 4px;}
+.mypage .progmg.allcare .iap_list_form .iap_list_li {border: 1px solid #ddd; border-radius: 4px;}
+.mypage .progmg.allcare .iap_list_form .iap_inner_ul {margin: 20px 16px;}
 .mypage .progmg.allcare .iap_list_form .iap_inner_li {display: flex; gap: 12px; align-items: center;}
 .mypage .progmg.allcare .iap_list_form .iap_inner_li+.iap_inner_li {margin-top: 8px;}
 .mypage .progmg.allcare .iap_list_form .iap_inner_li .tit {width: 84px;}
@@ -731,7 +732,7 @@
 .mypage .progmg.allcare .toggle_inner_ul li .apply_summary_status p.status_date {color: #333;}
 .mypage .progmg.allcare .toggle_inner_ul li .apply_summary_reason { margin-top: 8px; padding-left: 24px; position: relative; font-size: 14px; font-weight: 400; line-height: 24px; color: #e0024b;}
 .mypage .progmg.allcare .toggle_inner_ul li .apply_summary_reason::before {content: ''; width: 16px; height: 16px; position: absolute; left: 0; top: 3px; background: url('../images/mypage/ico16_reply.svg') no-repeat center / contain;}
-
+.mypage .progmg.allcare .toggle_wrap {background-color: #f8f8f8; border-top: 1px solid #ddd; padding: 16px; border-radius: 0 0 4px 4px;}
 
 
 
