--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -5,6 +5,7 @@
 .allcare .btn.type01.fill {background-color: var(--col_blue); color: #fff; font-weight: 600;}
 .allcare .btn.semilarge {height: 40px; line-height: 40px;}
 .allcare .btn.type03 {border: 1px solid #757575; font-weight: 600;}
+.allcare .btn.type03.fw400 {font-weight: 400;}
 .allcare .sr_only {position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0 0 0 0); white-space: nowrap; border: 0; font-size: 0;}
 .allcare .req_mark {position: relative; display: inline-block;}
 .allcare .req_mark:after {content: ''; position: absolute; right: -14px; top: 40%; transform: translateY(-50%); background-color: #ee2e62; border-radius: 50%; width: 6px; height: 6px;}
@@ -220,21 +221,33 @@
 .mypage .progmg.allcare .pa_page_wrap .board_list ul .board_li .board_list_row + .board_list_row {margin-top: 4px;}
 .mypage .progmg.allcare .pa_page_wrap .board_list ul .board_li .board_list_row .dt {width: 100px; font-size: 14px; font-weight: 400; line-height: 24px; color: #555;}
 .mypage .progmg.allcare .pa_page_wrap .board_list ul .board_li .board_list_row .dd {width: calc(100% - 100px); font-size: 14px; font-weight: 400; line-height: 24px; color: #333;}
-
+.mypage .progmg.allcare .join_request_list .board_li dl {display: flex; flex-wrap: wrap; gap: 4px 12px;}
+.mypage .progmg.allcare .join_request_list .board_li dl dt {width: 100px; font-size: 14px; font-weight: 400; line-height: 24px; color: #555;}
+.mypage .progmg.allcare .join_request_list .board_li dl dd {width: calc(100% - 112px); font-size: 14px; font-weight: 400; line-height: 24px; color: #333;}
 
 /* 참여신청서 - 등록 (UI_ADHPAbS03) */
 .mypage .progmg.allcare .my_ptcp_from .box_group_wrap + .box_group_wrap {margin-top: 24px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap {position: relative; padding-bottom: 32px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap::after {content: ''; position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); width: calc(100% + 2.5rem); height: 8px; background-color: #f3f5f6;}
-.mypage .progmg.allcare .my_ptcp_from .box_table_wrap.top_linewrap >div + div {border-top: 1px solid #eee;} 
-.mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dt { margin-top: 16px; font-size: 14px; color: #555; font-weight: 600; line-height: 24px;} 
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap.top_linewrap dt {border-top: 1px solid #eee; padding-top: 16px;} 
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap.top_linewrap dt:first-child {border-top: none; padding-top: 0;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap.top_linewrap >div + div {border-top: 1px solid #eee;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dt { margin-top: 16px; font-size: 14px; color: #555; font-weight: 600; line-height: 24px;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dd { margin: 8px 0 16px; font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap dt {font-size: 14px; color: #555; font-weight: 600; line-height: 24px;} 
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap dd { margin: 8px 0 16px; font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap dd .text_form_box textarea { width: 100%; height: 200px; padding: 16px; vertical-align: top; border: 1px solid var(--col_button); border-radius: 8px;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap dd .text_form_box .count_info { margin-top: 8px; font-size: 14px; color: var(--col_button); text-align: right; line-height: 24px;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap dd .text_form_box .result_byte { color:var(--col_body);}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap dd .text_form_box .max_byte { color:var(--col_button);}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dd_mail_link a {border-bottom: 1px solid #333;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dd { margin: 8px 0 16px; font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dd .text_form_box textarea { width: 100%; height: 200px; padding: 16px; vertical-align: top; border: 1px solid var(--col_button); border-radius: 8px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dd .text_form_box .count_info { margin-top: 8px; font-size: 14px; color: var(--col_button); text-align: right; line-height: 24px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dd .text_form_box .result_byte { color:var(--col_body);}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dd .text_form_box .max_byte { color:var(--col_button);}
-.mypage .progmg.allcare .my_ptcp_from .box_table_wrap >div:first-child .dt { margin-top: 8px;}
-.mypage .progmg.allcare .my_ptcp_from .box_table_wrap >div:last-child .dd {margin-bottom: 0;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap >div:first-child dt { margin-top: 8px;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap >div:last-child dd {margin-bottom: 0;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_group {display: flex; width: 100%; gap: 8px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_group .cell {width: calc(100% - 60px); line-height: initial;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_group>button.btnSearch {width: 60px; height: 48px;}
@@ -247,7 +260,7 @@
 .mypage .progmg.allcare .my_ptcp_from .notice_hopejob li+li {margin-top: 4px;}
 .mypage .progmg.allcare .my_ptcp_from .notice_hopejob li::before {content: ''; position: absolute; left: 4px; top: 9px; background-color: #555; border-radius: 50%; width: 4px; height: 4px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dl_person dd {margin: 12px 0 16px;}
-.mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dl_id input {width: 100%; height: 48px; color: #555; font-size: 16px; line-height: 28px; font-weight: 400; padding: 10px 16px; border: 1px solid #757575; border-radius: 4px;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dd_id input {width: 100%; height: 48px; color: #555; font-size: 16px; line-height: 28px; font-weight: 400; padding: 10px 16px; border: 1px solid #757575; border-radius: 4px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap select.new_down {width: 100%; height: 48px; color: #555; font-size: 16px; line-height: 28px; font-weight: 400; padding: 10px 32px 10px 16px; border: 1px solid #757575; border-radius: 4px; appearance: none; -webkit-appearance: none; -moz-appearance: none; background: url('../include/images/arrow16_down.svg') no-repeat center / contain; background-position:  right 12px center; background-size: 16px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap select.new_down option:disabled {display: none;}
 .mypage .progmg.allcare .my_ptcp_from .agm_area .agm_box {margin-top: 8px;}
@@ -495,6 +508,17 @@
 
 
 /* 참여 프로그램 관리 - 만족도 조사 (UI_ADHPAdS04) */
+.mypage .progmg.allcare .prog_qna_sec .prog_tit_dl dd {margin-top: 8px; margin-bottom: 16px; font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
+.mypage .progmg.allcare .prog_qna_sec .prog_qna dl dt {display: flex;}
+.mypage .progmg.allcare .prog_qna_sec .prog_qna dt {display: flex; gap: 4px; margin-bottom: 12px;} 
+.mypage .progmg.allcare .prog_qna_sec .prog_qna dt span {min-width: 24px; text-align: center; white-space: nowrap; font-size: 16px; color: var(--col_blue); line-height: 24px; font-weight: 600;}
+.mypage .progmg.allcare .prog_qna_sec .prog_qna dt .req_box { flex: 1;}
+.mypage .progmg.allcare .prog_qna_sec .prog_qna dt p {font-size: 16px; color: #333; line-height: 24px; font-weight: 600;} 
+.mypage .progmg.allcare .prog_qna_sec .prog_qna dt .req_box p.req_txt {color: #ee2e62; font-weight: 400; font-size: 14px;} 
+.mypage .progmg.allcare .prog_qna_sec .prog_qna dd {padding-bottom: 16px; margin-bottom: 16px; border-bottom: 1px solid #eee;} 
+.mypage .progmg.allcare .prog_qna_sec .prog_qna dd:last-child {border-bottom: none; margin-bottom: 0; padding-bottom: 0;}
+.mypage .progmg.allcare .prog_qna_sec .prog_qna dd .label_text {font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
+.mypage .progmg.allcare .prog_qna_sec .prog_qna dd li+li {margin-top: 12px;}
 .mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group {padding: 16px 0;} 
 .mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group:first-child {padding-top: 0;} 
 .mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group:last-child {padding-bottom: 0;} 
@@ -524,11 +548,9 @@
 .mypage .progmg.allcare .prog_list_sec.prg_spec .board_header .count { font-size: 14px;;}
 .mypage .progmg.allcare .prog_list_sec.prg_spec .board_header .year { font-size: 14px;}
 .mypage .progmg.allcare .prog_list_sec.prg_spec .prog_item {padding: 16px 0; border-bottom: 1px solid #eee;}
-.mypage .progmg.allcare .prog_list_sec.prg_spec .prog_item .data_group {display: flex; gap: 12px;}
-.mypage .progmg.allcare .prog_list_sec.prg_spec .prog_item .data_group + .data_group {margin-top: 4px;}
-.mypage .progmg.allcare .prog_list_sec.prg_spec .prog_item .data_group .dt {width: 100px; font-size: 14px; line-height: 24px; color: #555; font-weight: 400;}
-.mypage .progmg.allcare .prog_list_sec.prg_spec .prog_item .data_group .dd {font-size: 14px; line-height: 24px; color: #333; font-weight: 400;}
-
+.mypage .progmg.allcare .prog_list_sec .consul_hist_ul li dl {display: flex; flex-wrap: wrap; gap: 4px 12px;}
+.mypage .progmg.allcare .prog_list_sec .consul_hist_ul li dl dt {width: 100px; font-size: 14px; line-height: 24px; color: #555; font-weight: 400;}
+.mypage .progmg.allcare .prog_list_sec .consul_hist_ul li dl dd {width: calc(100% - 112px); font-size: 14px; line-height: 24px; color: #333; font-weight: 400; }
 
 
 /* 완료 페이지 - 신청서 제출 완료 (UI_ADHPAbS11) */
@@ -711,8 +733,9 @@
 .mypage .progmg.allcare .list_none_form .list_none_inner {background-color: #f5f6f8; border-radius: 8px; padding: 40px 16px; display: flex; flex-direction: column; align-items: center;}
 .mypage .progmg.allcare .list_none_form .list_none_inner .icon {width: 56px; height: 60px; display: block; background: url('../images/mypage/ico60_app-form.svg') no-repeat center / contain;}
 .mypage .progmg.allcare .list_none_form .list_none_inner .list_none_txt p {text-align: center;}
-.mypage .progmg.allcare .iap_list_form .iap_list_li {border: 1px solid #ddd; border-radius: 4px;}
-.mypage .progmg.allcare .iap_list_form .iap_inner_ul {margin: 20px 16px;}
+.mypage .progmg.allcare .iap_list_form .iap_list_li {border: 1px solid #ddd; border-radius: 4px; overflow: hidden;}
+.mypage .progmg.allcare .iap_list_form .iap_list_li+.iap_list_li {margin-top: 8px;}
+.mypage .progmg.allcare .iap_list_form .iap_inner_ul {padding: 20px 16px;}
 .mypage .progmg.allcare .iap_list_form .iap_inner_li {display: flex; gap: 12px; align-items: center;}
 .mypage .progmg.allcare .iap_list_form .iap_inner_li+.iap_inner_li {margin-top: 8px;}
 .mypage .progmg.allcare .iap_list_form .iap_inner_li .tit {width: 84px;}
@@ -725,18 +748,67 @@
 .mypage .progmg.allcare .after_border {position: relative; margin-bottom: 24px; padding-bottom: 32px;}
 .mypage .progmg.allcare .after_border::after {content: ''; position: absolute; left: 50%; bottom: 0; transform: translateX(-50%); background-color: #f3f5f6; width: calc(100% + 2.5rem); height: 8px;}
 
-.mypage .progmg.allcare .toggle_inner_ul {max-height: 256px; overflow: auto; border: 1px solid #ddd; border-radius: 8px; background-color: #fff; padding: 24px;} 
+.mypage .progmg.allcare .toggle_wrap {background-color: #f8f8f8;  border-top: 1px solid #ddd; border-radius: 0 0 4px 4px;}
+.mypage .progmg.allcare .toggle_inner_ul {margin: 16px 16px 0; max-height: 256px; overflow: auto; border: 1px solid #ddd; border-radius: 8px; background-color: #fff; padding: 16px;} 
 .mypage .progmg.allcare .toggle_inner_ul li + li {margin-top: 8px;}
 .mypage .progmg.allcare .toggle_inner_ul li .apply_summary_status {display: flex;  justify-content: space-between; font-size: 14px;}
 .mypage .progmg.allcare .toggle_inner_ul li .apply_summary_status p {font-size: 14px; line-height: 24px; color: #555; font-weight: 400;}
 .mypage .progmg.allcare .toggle_inner_ul li .apply_summary_status p.status_date {color: #333;}
 .mypage .progmg.allcare .toggle_inner_ul li .apply_summary_reason { margin-top: 8px; padding-left: 24px; position: relative; font-size: 14px; font-weight: 400; line-height: 24px; color: #e0024b;}
 .mypage .progmg.allcare .toggle_inner_ul li .apply_summary_reason::before {content: ''; width: 16px; height: 16px; position: absolute; left: 0; top: 3px; background: url('../images/mypage/ico16_reply.svg') no-repeat center / contain;}
-.mypage .progmg.allcare .toggle_wrap {background-color: #f8f8f8; border-top: 1px solid #ddd; padding: 16px; border-radius: 0 0 4px 4px;}
-
+.mypage .progmg.allcare .toggle_wrap .toggle_btn_box {background-color: #f8f8f8; height: 44px; display: flex; align-items: center; justify-content: center;}
+.mypage .progmg.allcare .toggle_wrap .toggle_btn_box button {display: none; padding-right: 20px; position: relative;}
+.mypage .progmg.allcare .toggle_wrap .toggle_btn_box button::after {content: ''; position: absolute; right: 0; top: 50%; transform: translateY(-50%); background: url('../images/mypage/arrow16_down.svg') no-repeat center / contain; width: 16px; height: 16px;}
+.mypage .progmg.allcare .toggle_wrap .toggle_btn_box button.active {display: block;}
+.mypage .progmg.allcare .toggle_wrap .toggle_btn_box button.toggle_close::after {transform: translateY(-50%) rotate(180deg); }
 
 
 /* 점프업 - IAP관리_등록 (UI_ADHPCfS02) */
+.mypage .progmg.allcare .iap_manag_wrap .dd_rowcell {display: flex; align-items: center; gap: 24px;}
+.mypage .progmg.allcare .iap_manag_wrap .dd_rowcell .new_down {max-width: 156px;}
+.mypage .progmg.allcare .radio_filed.filed_row {display: flex; gap: 16px; align-items: center;}
+.mypage .progmg.allcare .radio_filed.filed_row .new_radio_item {margin: 0;}
+.mypage .progmg.allcare .box_group_wrap .dd_row_ipt {display: flex; align-items: center; gap: 8px;}
+.mypage .progmg.allcare .box_group_wrap .dd_row_ipt .new_ipt {width: calc(100% - 36px);}
+.mypage .progmg.allcare .box_group_wrap .row_ipt_txt {width: 28px;}
+.mypage .progmg.allcare .box_group_wrap .label_row {display: flex; align-items: center; gap: 8px;}
+.mypage .progmg.allcare .nri_center {align-items: center;}
+.mypage .progmg.allcare .box_group_wrap .label_row .new_ipt {flex: 1;}
+
+.mypage .progmg.allcare .box_group_wrap .tit_row_hd {display: flex; justify-content: space-between; align-items: center;}
+.mypage .progmg.allcare .box_group_wrap .tit_row_hd .txt_box {display: flex; align-items: center; gap: 8px;}
+.mypage .progmg.allcare .box_group_wrap .tit_row_hd .txt_box p .count {color: var(--col_blue); font-weight: 600;}
+.mypage .progmg.allcare .box_group_wrap .tit_row_hd .button_box button {padding: 4px 10px;}
+.mypage .progmg.allcare .box_group_wrap .tit_row_hd .button_box button span {padding-left: 20px; position: relative;}
+.mypage .progmg.allcare .box_group_wrap .tit_row_hd .button_box button span::after {content: ''; position: absolute; left: 0; top: 50%; transform: translateY(-50%); width: 16px; height: 16px; background: url('../images/mypage/ico16_add.svg') no-repeat center / contain;}
+
+.mypage .progmg.allcare .line_inner_box {border: 1px solid #ddd; border-radius: 12px; padding: 16px;}
+.mypage .progmg.allcare .line_inner_box+.line_inner_box {margin-top: 16px;}
+.mypage .progmg.allcare .line_inner_box ul li .dt {margin-bottom: 8px; font-size: 14px; color: #555; font-weight: 600; line-height: 24px;}
+.mypage .progmg.allcare .line_inner_box ul li+li {margin-top: 16px;}
+.mypage .progmg.allcare .line_inner_box .dd_date_row {display: flex; align-items: center; gap: 4px;}
+.mypage .progmg.allcare .line_inner_box .dd_date_row>span {width: 24px; text-align: center; flex: 1;} 
+.mypage .progmg.allcare .line_inner_box .dd_date_row .date_area {width: calc(50% - 16px);}
+.mypage .progmg.allcare .line_inner_box .text_form_box textarea { width: 100%; height: 200px; padding: 16px; vertical-align: top; border: 1px solid var(--col_button); border-radius: 8px;}
+.mypage .progmg.allcare .line_inner_box .text_form_box .count_info { margin-top: 8px; font-size: 14px; color: var(--col_button); text-align: right; line-height: 24px;}
+.mypage .progmg.allcare .line_inner_box .text_form_box .result_byte { color:var(--col_body);}
+.mypage .progmg.allcare .line_inner_box .text_form_box .max_byte { color:var(--col_button);}
+.mypage .progmg.allcare .line_inner_box .inner_btn_wrap {display: flex; justify-content: space-between; align-items: center;}
+.mypage .progmg.allcare .line_inner_box .inner_btn_wrap .gap_button_box {display: flex; align-items: center; gap: 8px;}
+.mypage .progmg.allcare .line_inner_box .inner_btn_wrap .gap_button_box.move_type button {width: 40px; height: 40px; border: 1px solid #757575; border-radius: 4px; position: relative;}
+.mypage .progmg.allcare .line_inner_box .inner_btn_wrap .gap_button_box.move_type button::after {content: ''; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); background: url('../images/mypage/arrow16_down.svg') no-repeat center / contain; width: 16px; height: 16px;}
+.mypage .progmg.allcare .line_inner_box .inner_btn_wrap .gap_button_box button.move_up::after {transform: translate(-50%, -50%) rotate(180deg);}
+.mypage .progmg.allcare .line_inner_box .inner_btn_wrap .delete_btn {width: 60px; height: 40px; display: flex; justify-content: center; align-items: center; border: 1px solid #757575; border-radius: 4px;}
+.mypage .progmg.allcare .line_inner_box .inner_btn_wrap .add_btn {width: 60px; height: 40px; display: flex; justify-content: center; align-items: center; border: 1px solid var(--col_blue);  border-radius: 4px;}
+.mypage .progmg.allcare .line_inner_box .inner_btn_wrap .add_btn span {color: var(--col_blue);}
+.mypage .progmg.allcare .line_inner_box select.new_down {width: 100%; height: 48px; color: #555; font-size: 16px; line-height: 28px; font-weight: 400; padding: 10px 32px 10px 16px; border: 1px solid #757575; border-radius: 4px; appearance: none; -webkit-appearance: none; -moz-appearance: none; background: url(../include/images/arrow16_down.svg) no-repeat center / contain; background-position: right 12px center; background-size: 16px;}
+.mypage .progmg.allcare .cont_none_box {display: flex; flex-direction: column; align-items: center; text-align: center; padding: 32px 24px;}
+.mypage .progmg.allcare .cont_none_box .none_tit {position: relative; padding-left: 28px;}
+.mypage .progmg.allcare .cont_none_box .none_tit::after {content: ''; width: 24px; height: 24px; position: absolute; left: 0; top: 50%; transform: translateY(-50%); background: url('../images/mypage/ico24_memo_edit.svg') no-repeat center / contain;}
+.mypage .progmg.allcare .cont_none_box .write_btn {padding: 6px 16px; border: 1px solid #757575; border-radius: 4px;}
+
+
+
 
 
 /* 점프업 - IAP관리_조회/수정(저장) (UI_ADHPCfS03) */
