--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -757,8 +757,9 @@
 .mypage .progmg.allcare .toggle_inner_ul li .apply_summary_reason { margin-top: 8px; padding-left: 24px; position: relative; font-size: 14px; font-weight: 400; line-height: 24px; color: #e0024b;}
 .mypage .progmg.allcare .toggle_inner_ul li .apply_summary_reason::before {content: ''; width: 16px; height: 16px; position: absolute; left: 0; top: 3px; background: url('../images/mypage/ico16_reply.svg') no-repeat center / contain;}
 .mypage .progmg.allcare .toggle_wrap .toggle_btn_box {background-color: #f8f8f8; height: 44px; display: flex; align-items: center; justify-content: center;}
-.mypage .progmg.allcare .toggle_wrap .toggle_btn_box button {display: none; padding-right: 20px; position: relative;}
-.mypage .progmg.allcare .toggle_wrap .toggle_btn_box button::after {content: ''; position: absolute; right: 0; top: 50%; transform: translateY(-50%); background: url('../images/mypage/arrow16_down.svg') no-repeat center / contain; width: 16px; height: 16px;}
+.mypage .progmg.allcare .toggle_wrap .toggle_btn_box button {display: none; width: 100%; height: 100%;  position: relative;}
+.mypage .progmg.allcare .toggle_wrap .toggle_btn_box button span {position: relative; padding-right: 20px;}
+.mypage .progmg.allcare .toggle_wrap .toggle_btn_box button span::after {content: ''; position: absolute; right: 0; top: 50%; transform: translateY(-50%); background: url('../images/mypage/arrow16_down.svg') no-repeat center / contain; width: 16px; height: 16px;}
 .mypage .progmg.allcare .toggle_wrap .toggle_btn_box button.active {display: block;}
 .mypage .progmg.allcare .toggle_wrap .toggle_btn_box button.toggle_close::after {transform: translateY(-50%) rotate(180deg); }
 
